2015-02-27  Ken Brown  <kbrown@cornell.edu>

	* install-info/install-info.c (open_possibly_compressed_file):
	Use 'fopen' to read the few first bytes, and then, only if it is 
	compressed, redirect stdin to it and call 'popen'.  Suggestion 
	from Eli Zaretskii.

2015-02-26  Patrice Dumas  <pertusus@free.fr>

	* tp/tests/t/stdout.sh, tp/tests/t/stdout_split.sh: use $PERL
	from defs to call texi2any.pl.  Report from Eli Zaretskii.

2015-02-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (get_manpage_from_formatter): Accept output of 
	"man" despite a failing exit status if it is long enough.

2015-02-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (display_startup_message): Startup message 
	changed.  Note added for translators.
	* po/Makevars (XGETTEXT_OPTIONS): Add -cTRANSLATORS flag.
	* po/POTFILES.in: Add info/infomap.c.

2015-02-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Check for posix_openpt in AC_CHECK_FUNCS, and 
	set automake conditional "have_ptys" depending on result.
	* info/Makefile.am (check_PROGRAMS): Build of "pseudotty" 
	dependent upon "have_ptys".
	* info/t/Init-inter.inc: Skip test if pseudotty not built.

2015-02-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c (get_manpage_from_formatter)
	[PIPE_USE_FORK, !PIPE_USE_FORK]: If exit status of "man" command 
	is non-zero, throw away its output.  Report from Eli Zaretskii.

2015-02-25  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (w32_info_prep, w32_info_unprep, w32_cleanup)
	(gettextinfo, textattr, ScreenGetCursor, ScreenSetCursor)
	(ScreenClear, clreol, ScreenVisualBell, movetext, ScreenRows)
	(ScreenCols, _set_screen_lines, w32_set_screen_dimensions)
	(pc_put_text, pc_write_chars, pc_unprep_terminal) [_WIN32]: Do the
	minimum (mostly, nothing) when not connected to the terminal
	device.

2015-02-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infomap.c (fetch_user_maps): Print an error message if 