@@ -11,7 +11,7 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-SUBDIRS = tests
+SUBDIRS = . tests
 bin_PROGRAMS = ginstall-info
 
 w32_script = ginstall-info.exe.manifest
